update availability to yes or no

--- a/views/partials/form-reservation-edit.ejs
+++ b/views/partials/form-reservation-edit.ejs
@@ -19,10 +19,10 @@
         <label for="category">Category:</label>
         <input type="text" class="form-control" readonly id="category" name="category" value=<%=rooms.category%>>
     </div>
-    <div class="form-group">
+    <!-- <div class="form-group">
         <label for="available">Available:</label>
-        <input type="text" class="form-control" readonly id="available" name="available" value=<%=rooms.available%>>
-    </div>
+        <input type="text" class="form-control" readonly id="available" name="available" value=<%#=rooms.available%>>
+    </div> -->
     <div class="form-group">
         <label for="customerName">Customer Name:</label>
         <input type="text" class="form-control" id="customerName" name="customerName" value=<%=data.customerName%>>
