--- a/views/partials/form-room-edit.ejs
+++ b/views/partials/form-room-edit.ejs
@@ -32,11 +32,11 @@
         <label for="available">Available:</label>
         <select class="w-100" id="available" name="available">
             <%if(data.available==true){%>
-                <option value="true" selected>true</option>
-                <option value="false">false</option>
+                <option value="true" selected>Yes</option>
+                <option value="false">No</option>
             <%}else{%>
-                <option value="true">true</option>
-                <option value="false" selected>false</option>
+                <option value="true">Yes</option>
+                <option value="false" selected>No</option>
             <%}%>
         </select>
     </div>
