--- a/views/partials/form-room.ejs
+++ b/views/partials/form-room.ejs
@@ -25,8 +25,8 @@
     <div class="form-group">
         <label for="available">Available:</label>
         <select class="w-100" id="available" name="available">
-            <option value="true">true</option>
-            <option value="false">false</option>
+            <option value="true">Yes</option>
+            <option value="false">No</option>
         </select>
     </div>
     <input type="submit" class="btn btn-primary mt-1" value="Submit">
