--- a/views/reservation-view.ejs
+++ b/views/reservation-view.ejs
@@ -10,7 +10,7 @@
                     <p class="card-text">Capacity: <%=rooms.capacity%></p>
                     <p class="card-text">Price: <%=rooms.price%></p>
                     <p class="card-text">Category: <%=rooms.category%></p>
-                    <p class="card-text">Available: <%=rooms.available%></p>
+                    <!-- <p class="card-text">Available: <%#=rooms.available%></p> -->
                     <p class="card-text">Reservation Id: <%=data._id%></p>
                     <p class="card-text">Customer Name: <%=data.customerName%></p>
                     <p class="card-text">Customer Email: <%=data.customerEmail%></p>
