--- a/views/reservation.ejs
+++ b/views/reservation.ejs
@@ -28,7 +28,7 @@
                     <div class="card-body">
                         <h5 class="card-title"><%=items.customerName%></h5>
                         <p class="card-text"><%=items.customerEmail%></p>
-                        <p class="card-text"><%=items.roomId%></p>
+                        <p class="card-text"><%=items.customerMobile%></p>
                     </div>
                     <a href=<%="reservation/view/" + items._id %> class="btn btn-primary mt-1">View</a>
                     <a href=<%="reservation/edit/" + items._id %> class="btn btn-secondary mt-1">Edit</a>
